--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>JWT HandsOn</title>
-    <script src="token.js"></script>
+    <script src="js/token.js"></script>
     </head>
     
     <body>
